Fixed paragraphs overflowing container

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,10 @@ body {
   font-family:Arial, Helvetica, sans-serif;
 }
 
+p {
+  width: 97%;
+}
+
 header {
   height: 96px;
   width: 930px; }
